style: update PDF export template with centered cells and consistent cross symbol (×→✕)

--- a/assets/pdf/diary-export-template.html
+++ b/assets/pdf/diary-export-template.html
@@ -65,10 +65,12 @@
         padding: 6px 8px;
         vertical-align: middle;
         word-wrap: break-word;
+        text-align: center;
       }
       td.label {
         font-weight: 400;
         color: #111;
+        text-align: left;
       }
       .section-row td {
         background: #eef2f7;
@@ -97,7 +99,7 @@
     <!-- Main table page -->
     <div class="title">Дневник поведения</div>
     <div class="subtitle">
-      1 — 7 августа • Мысли: пример | Эмоции: пример | Действия: пример
+      1 — 7 августа • Мысли: 4 | Эмоции: 3 | Действия: 5
     </div>
 
     <table class="data-table">
@@ -242,13 +244,13 @@
         </tr>
         <tr>
           <td class="label">Переедание</td>
-          <td>×</td>
-          <td>×</td>
+          <td>✕</td>
+          <td>✕</td>
           <td>✓</td>
-          <td>×</td>
-          <td>×</td>
+          <td>✕</td>
+          <td>✕</td>
           <td>✓</td>
-          <td>×</td>
+          <td>✕</td>
         </tr>
         <tr>
           <td class="label">Социальные сети</td>
@@ -280,7 +282,6 @@
     <!-- Practice table page -->
     <div class="practice-page">
       <div class="title">Дневник навыков</div>
-      <div class="subtitle">1 — 7 августа</div>
       <table class="data-table">
         <colgroup>
           <col class="label-col" />
