style: add top padding to practice pages in PDF diary exports

--- a/assets/pdf/diary-export-template.html
+++ b/assets/pdf/diary-export-template.html
@@ -92,6 +92,7 @@
       /* Start Practice table on a new page when printing */
       .practice-page {
         page-break-before: always;
+        padding-top: 6mm; /* extra top spacing for the header on the new page */
       }
     </style>
   </head>
