feat: add diary export template for PDF generation

--- a/assets/pdf/diary-export-template.html
+++ b/assets/pdf/diary-export-template.html
@@ -328,6 +328,9 @@
           </tr>
         </thead>
         <tbody>
+          <tr class="section-row">
+            <td class="label" colspan="8">Осознанность</td>
+          </tr>
           <tr>
             <td class="label">Наблюдение за дыханием</td>
             <td>●</td>
@@ -337,6 +340,10 @@
             <td></td>
             <td>●</td>
             <td></td>
+          </tr>
+
+          <tr class="section-row">
+            <td class="label" colspan="8">Терпимость к дистрессу</td>
           </tr>
           <tr>
             <td class="label">Заземление 5–4–3–2–1</td>
@@ -354,16 +361,6 @@
             <td></td>
             <td>●</td>
             <td></td>
-            <td>●</td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td class="label">Доброта к себе</td>
-            <td></td>
-            <td>●</td>
-            <td></td>
-            <td>●</td>
             <td>●</td>
             <td></td>
             <td></td>
@@ -388,6 +385,20 @@
             <td></td>
             <td>●</td>
           </tr>
+
+          <tr class="section-row">
+            <td class="label" colspan="8">Регуляция эмоций</td>
+          </tr>
+          <tr>
+            <td class="label">Доброта к себе</td>
+            <td></td>
+            <td>●</td>
+            <td></td>
+            <td>●</td>
+            <td>●</td>
+            <td></td>
+            <td></td>
+          </tr>
           <tr>
             <td class="label">Делание наоборот</td>
             <td></td>
@@ -407,6 +418,10 @@
             <td></td>
             <td></td>
             <td></td>
+          </tr>
+
+          <tr class="section-row">
+            <td class="label" colspan="8">Межличностная эффективность</td>
           </tr>
           <tr>
             <td class="label">Активное слушание</td>
