--- a/index.html
+++ b/index.html
@@ -239,11 +239,9 @@
       }
 
       .app-logo {
-        font-size: 48px;
-        color: white;
-        font-weight: 600;
-        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-        letter-spacing: 1px;
+        max-width: 200px;
+        height: auto;
+        filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
       }
 
       /* Store Buttons */
@@ -448,6 +446,12 @@
         overflow: hidden;
       }
 
+      .app-screenshot {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
       /* Responsive Design */
       @media (max-width: 1024px) {
         .main-container {
@@ -481,7 +485,7 @@
         }
 
         .app-logo {
-          font-size: 40px;
+          max-width: 160px;
         }
       }
     </style>
@@ -493,7 +497,7 @@
       <div class="content-section">
         <!-- Logo Section -->
         <div class="logo-section">
-          <div class="app-logo">Horosho</div>
+          <img src="assets/images/zaebok.jpg" alt="Horosho" class="app-logo" />
         </div>
 
         <!-- Store Buttons -->
@@ -523,7 +527,7 @@
 
         <!-- Footer Links -->
         <div class="footer-links">
-          <a href="#" class="footer-link">Политика конфиденциальности</a>
+          <a href="privacy-policy.html" class="footer-link">Политика конфиденциальности</a>
         </div>
       </div>
 
@@ -558,7 +562,7 @@
 
               <!-- App Container - Ready for your React Native build -->
               <div class="app-container">
-                <!-- Your React Native web build will go here -->
+                <img src="assets/images/screen-1.png" alt="App Screenshot" class="app-screenshot" />
               </div>
             </div>
           </div>
