--- a/index.html
+++ b/index.html
@@ -230,18 +230,20 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: flex-start;
       }
 
       /* Logo Section */
       .logo-section {
-        margin-bottom: 40px;
-        text-align: center;
+        margin-bottom: 60px;
+        text-align: left;
       }
 
       .app-logo {
-        max-width: 200px;
+        max-width: 350px;
         height: auto;
-        filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.3));
+        mix-blend-mode: multiply;
+        filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.2));
       }
 
       /* Store Buttons */
@@ -485,7 +487,11 @@
         }
 
         .app-logo {
-          max-width: 160px;
+          max-width: 280px;
+        }
+
+        .logo-section {
+          text-align: center;
         }
       }
     </style>
