style: update logo image format and enhance drop shadow effect

--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
       .app-logo {
         max-width: 350px;
         height: auto;
-        mix-blend-mode: multiply;
-        filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.2));
+        filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
       }
 
       /* Store Buttons */
@@ -503,7 +502,7 @@
       <div class="content-section">
         <!-- Logo Section -->
         <div class="logo-section">
-          <img src="assets/images/zaebok.jpg" alt="Horosho" class="app-logo" />
+          <img src="assets/images/zaebok.png" alt="Horosho" class="app-logo" />
         </div>
 
         <!-- Store Buttons -->
