style: simplify background and update logo styling for cleaner look

--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
       }
 
       body {
-        background: radial-gradient(
-            circle at 20% 80%,
-            rgba(120, 119, 198, 0.3) 0%,
-            transparent 50%
-          ),
-          radial-gradient(
-            circle at 80% 20%,
-            rgba(255, 119, 198, 0.3) 0%,
-            transparent 50%
-          ),
-          linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: #ffffff;
         min-height: 100vh;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
@@ -42,7 +32,7 @@
         position: fixed;
         width: 4px;
         height: 4px;
-        background: rgba(255, 255, 255, 0.15);
+        background: rgba(102, 126, 234, 0.15);
         border-radius: 50%;
         pointer-events: none;
         z-index: 1;
@@ -240,9 +230,8 @@
       }
 
       .app-logo {
-        max-width: 350px;
+        max-width: 100%;
         height: auto;
-        filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
       }
 
       /* Store Buttons */
@@ -502,7 +491,7 @@
       <div class="content-section">
         <!-- Logo Section -->
         <div class="logo-section">
-          <img src="assets/images/zaebok.png" alt="Horosho" class="app-logo" />
+          <img src="assets/images/zaebok-large.jpg" alt="Horosho" class="app-logo" />
         </div>
 
         <!-- Store Buttons -->
