style: adjust UI dimensions and visual elements for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
 
       body {
-        background: #ffffff;
+        background: #F5F6FA;
         min-height: 100vh;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
@@ -30,9 +30,9 @@
       /* Floating particles - from different screen edges */
       .floating-particle {
         position: fixed;
-        width: 4px;
-        height: 4px;
-        background: rgba(102, 126, 234, 0.15);
+        width: 6px;
+        height: 6px;
+        background: rgba(102, 126, 234, 0.25);
         border-radius: 50%;
         pointer-events: none;
         z-index: 1;
@@ -321,7 +321,7 @@
 
       .phone-frame {
         width: 320px;
-        height: 640px;
+        height: 680px;
         background: linear-gradient(145deg, #2c2c2c, #1a1a1a);
         border-radius: 35px;
         padding: 12px;
@@ -456,14 +456,14 @@
 
         .phone-frame {
           width: 280px;
-          height: 560px;
+          height: 595px;
         }
       }
 
       @media (max-width: 768px) {
         .phone-frame {
           width: 260px;
-          height: 520px;
+          height: 553px;
         }
 
         .store-buttons {
@@ -491,7 +491,7 @@
       <div class="content-section">
         <!-- Logo Section -->
         <div class="logo-section">
-          <img src="assets/images/zaebok-large.jpg" alt="Horosho" class="app-logo" />
+          <img src="assets/images/zaebok-medium.jpg" alt="Horosho" class="app-logo" />
         </div>
 
         <!-- Store Buttons -->
