--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
 
       body {
-        background: #F5F6FA;
+        background: linear-gradient(to bottom, #F5F6FA 0%, #F5F6FA 70%, #667eea 100%);
         min-height: 100vh;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
@@ -27,184 +27,6 @@
         padding: 20px;
       }
 
-      /* Floating particles - from different screen edges */
-      .floating-particle {
-        position: fixed;
-        width: 6px;
-        height: 6px;
-        background: rgba(102, 126, 234, 0.25);
-        border-radius: 50%;
-        pointer-events: none;
-        z-index: 1;
-      }
-
-      .particle-from-bottom {
-        animation: floatFromBottom 18s infinite ease-in-out;
-      }
-
-      .particle-from-top {
-        animation: floatFromTop 20s infinite ease-in-out;
-      }
-
-      .particle-from-left {
-        animation: floatFromLeft 16s infinite ease-in-out;
-      }
-
-      .particle-from-right {
-        animation: floatFromRight 22s infinite ease-in-out;
-      }
-
-      @keyframes floatFromBottom {
-        0% {
-          transform: translateY(100vh) translateX(0px);
-          opacity: 0;
-        }
-        5% {
-          opacity: 1;
-        }
-        15% {
-          transform: translateY(85vh) translateX(8px);
-          opacity: 0.6;
-        }
-        30% {
-          transform: translateY(70vh) translateX(18px);
-          opacity: 0.8;
-        }
-        45% {
-          transform: translateY(55vh) translateX(12px);
-          opacity: 0.9;
-        }
-        60% {
-          transform: translateY(40vh) translateX(-5px);
-          opacity: 0.8;
-        }
-        75% {
-          transform: translateY(25vh) translateX(-15px);
-          opacity: 0.6;
-        }
-        90% {
-          transform: translateY(10vh) translateX(-8px);
-          opacity: 0.3;
-        }
-        100% {
-          transform: translateY(-100px) translateX(0px);
-          opacity: 0;
-        }
-      }
-
-      @keyframes floatFromTop {
-        0% {
-          transform: translateY(-100px) translateX(0px);
-          opacity: 0;
-        }
-        5% {
-          opacity: 1;
-        }
-        15% {
-          transform: translateY(15vh) translateX(-10px);
-          opacity: 0.6;
-        }
-        30% {
-          transform: translateY(30vh) translateX(-20px);
-          opacity: 0.8;
-        }
-        45% {
-          transform: translateY(45vh) translateX(-12px);
-          opacity: 0.9;
-        }
-        60% {
-          transform: translateY(60vh) translateX(8px);
-          opacity: 0.8;
-        }
-        75% {
-          transform: translateY(75vh) translateX(16px);
-          opacity: 0.6;
-        }
-        90% {
-          transform: translateY(90vh) translateX(6px);
-          opacity: 0.3;
-        }
-        100% {
-          transform: translateY(100vh) translateX(0px);
-          opacity: 0;
-        }
-      }
-
-      @keyframes floatFromLeft {
-        0% {
-          transform: translateX(-100px) translateY(0px);
-          opacity: 0;
-        }
-        5% {
-          opacity: 1;
-        }
-        15% {
-          transform: translateX(15vw) translateY(12px);
-          opacity: 0.6;
-        }
-        30% {
-          transform: translateX(30vw) translateY(25px);
-          opacity: 0.8;
-        }
-        45% {
-          transform: translateX(45vw) translateY(15px);
-          opacity: 0.9;
-        }
-        60% {
-          transform: translateX(60vw) translateY(-8px);
-          opacity: 0.8;
-        }
-        75% {
-          transform: translateX(75vw) translateY(-18px);
-          opacity: 0.6;
-        }
-        90% {
-          transform: translateX(90vw) translateY(-6px);
-          opacity: 0.3;
-        }
-        100% {
-          transform: translateX(100vw) translateY(0px);
-          opacity: 0;
-        }
-      }
-
-      @keyframes floatFromRight {
-        0% {
-          transform: translateX(100vw) translateY(0px);
-          opacity: 0;
-        }
-        5% {
-          opacity: 1;
-        }
-        15% {
-          transform: translateX(85vw) translateY(-14px);
-          opacity: 0.6;
-        }
-        30% {
-          transform: translateX(70vw) translateY(-22px);
-          opacity: 0.8;
-        }
-        45% {
-          transform: translateX(55vw) translateY(-10px);
-          opacity: 0.9;
-        }
-        60% {
-          transform: translateX(40vw) translateY(12px);
-          opacity: 0.8;
-        }
-        75% {
-          transform: translateX(25vw) translateY(20px);
-          opacity: 0.6;
-        }
-        90% {
-          transform: translateX(10vw) translateY(8px);
-          opacity: 0.3;
-        }
-        100% {
-          transform: translateX(-100px) translateY(0px);
-          opacity: 0;
-        }
-      }
 
       /* Main Layout */
       .main-container {
@@ -565,43 +387,6 @@
     </div>
 
     <script>
-      // Create particles from different screen edges - fixed positioning
-      function createFloatingParticles() {
-        const directions = ["bottom", "top", "left", "right"];
-
-        for (let i = 0; i < 12; i++) {
-          const particle = document.createElement("div");
-          const direction = directions[i % 4];
-
-          particle.className = `floating-particle particle-from-${direction}`;
-
-          // Set starting position based on direction - using left/top only
-          switch (direction) {
-            case "bottom":
-              particle.style.left = Math.random() * 100 + "vw";
-              particle.style.top = "100vh";
-              break;
-            case "top":
-              particle.style.left = Math.random() * 100 + "vw";
-              particle.style.top = "-50px";
-              break;
-            case "left":
-              particle.style.left = "-50px";
-              particle.style.top = Math.random() * 100 + "vh";
-              break;
-            case "right":
-              particle.style.left = "100vw";
-              particle.style.top = Math.random() * 100 + "vh";
-              break;
-          }
-
-          particle.style.animationDelay = Math.random() * 10 + "s";
-          document.body.appendChild(particle);
-        }
-      }
-
-      // Initialize everything
-      createFloatingParticles();
 
       // Update time in status bar
       function updateTime() {
