--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       .phone-frame {
         width: 320px;
-        height: 680px;
+        height: 645px;
         background: linear-gradient(145deg, #2c2c2c, #1a1a1a);
         border-radius: 35px;
         padding: 12px;
@@ -278,14 +278,14 @@
 
         .phone-frame {
           width: 280px;
-          height: 595px;
+          height: 565px;
         }
       }
 
       @media (max-width: 768px) {
         .phone-frame {
           width: 260px;
-          height: 553px;
+          height: 525px;
         }
 
         .store-buttons {
@@ -378,7 +378,7 @@
 
               <!-- App Container - Ready for your React Native build -->
               <div class="app-container">
-                <img src="assets/images/screen-1.png" alt="App Screenshot" class="app-screenshot" />
+                <img src="assets/images/screen-1-cropped.png" alt="App Screenshot" class="app-screenshot" />
               </div>
             </div>
           </div>
