--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       }
 
       body {
-        background: linear-gradient(to bottom, #F5F6FA 0%, #F5F6FA 70%, #667eea 100%);
+        background: linear-gradient(
+          to bottom,
+          #f5f6f9 0%,
+          #f5f6f9 70%,
+          #667eea 100%
+        );
         min-height: 100vh;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           sans-serif;
@@ -26,7 +31,6 @@
         justify-content: center;
         padding: 20px;
       }
-
 
       /* Main Layout */
       .main-container {
@@ -313,7 +317,11 @@
       <div class="content-section">
         <!-- Logo Section -->
         <div class="logo-section">
-          <img src="assets/images/zaebok-medium.jpg" alt="Horosho" class="app-logo" />
+          <img
+            src="assets/images/zaebok-medium-removebg-preview.png"
+            alt="Horosho"
+            class="app-logo"
+          />
         </div>
 
         <!-- Store Buttons -->
@@ -343,7 +351,9 @@
 
         <!-- Footer Links -->
         <div class="footer-links">
-          <a href="privacy-policy.html" class="footer-link">Политика конфиденциальности</a>
+          <a href="privacy-policy.html" class="footer-link"
+            >Политика конфиденциальности</a
+          >
         </div>
       </div>
 
@@ -378,7 +388,11 @@
 
               <!-- App Container - Ready for your React Native build -->
               <div class="app-container">
-                <img src="assets/images/screen-1-cropped.png" alt="App Screenshot" class="app-screenshot" />
+                <img
+                  src="assets/images/screen-1-cropped.png"
+                  alt="App Screenshot"
+                  class="app-screenshot"
+                />
               </div>
             </div>
           </div>
@@ -387,7 +401,6 @@
     </div>
 
     <script>
-
       // Update time in status bar
       function updateTime() {
         const now = new Date();
