style: update footer link colors to match dark theme palette

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
       }
 
       .footer-link {
-        color: rgba(255, 255, 255, 0.8);
+        color: #2d2d4a;
         text-decoration: none;
         font-size: 14px;
         transition: color 0.3s ease;
       }
 
       .footer-link:hover {
-        color: white;
+        color: #667eea;
         text-decoration: underline;
       }
 
