feat: add app store assets and RuStore download link

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
               <div class="store-name">Google Play</div>
             </div>
           </a>
-          <a href="#" class="store-btn" aria-label="Скачать в RuStore">
+          <a href="https://www.rustore.ru/catalog/app/app.mitenka.sojdet" class="store-btn" aria-label="Скачать в RuStore">
             <div class="store-icon">🇷🇺</div>
             <div class="store-text">
               <div class="store-label">Доступно в</div>
