feat: add App Store download link for iOS app

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
         <!-- Store Buttons -->
         <div class="store-buttons">
-          <a href="#" class="store-btn" aria-label="Скачать в App Store">
+          <a href="https://apps.apple.com/rs/app/%D1%81%D0%BE%D0%B9%D0%B4%D1%91%D1%82/id6748304329" class="store-btn" aria-label="Скачать в App Store">
             <div class="store-icon">🍎</div>
             <div class="store-text">
               <div class="store-label">Скачать в</div>
