--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@
               <div class="store-name">App Store</div>
             </div>
           </a>
-          <a href="#" class="store-btn" aria-label="Доступно в Google Play">
+          <!-- <a href="#" class="store-btn" aria-label="Доступно в Google Play">
             <div class="store-icon">🤖</div>
             <div class="store-text">
               <div class="store-label">Доступно в</div>
               <div class="store-name">Google Play</div>
             </div>
-          </a>
+          </a> -->
           <a href="https://www.rustore.ru/catalog/app/app.mitenka.sojdet" class="store-btn" aria-label="Скачать в RuStore">
             <div class="store-icon">🇷🇺</div>
             <div class="store-text">
