style: center app store buttons and set fixed width

--- a/index.html
+++ b/index.html
@@ -294,10 +294,11 @@
 
         .store-buttons {
           width: 100%;
+          align-items: center;
         }
 
         .store-btn {
-          min-width: auto;
+          width: 280px;
           padding: 14px 20px;
         }
 
